--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Space explorer.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Space explorer" startnode="1" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="9B3D6521-2D1E-414D-B9D3-E50AFF88FF3F" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Distress signal" tags="" position="625,300" size="100,100">You are a space explorer on a mission to find new planets to colonize. As you travel through space, you receive a distress signal from a nearby ship.
+<tw-storydata name="Space explorer" startnode="1" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="9B3D6521-2D1E-414D-B9D3-E50AFF88FF3F" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Distress signal" tags="" position="625,300" size="100,100">You are a space explorer on a mission to find new planets to colonize. As you travel through space, you receive a signal from a nearby ship.
 
 Do you:
 
