--- a/index.html
+++ b/index.html
@@ -9,12 +9,26 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Space explorer.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Space explorer" startnode="1" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="9B3D6521-2D1E-414D-B9D3-E50AFF88FF3F" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+<tw-storydata name="Space explorer" startnode="1" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="9B3D6521-2D1E-414D-B9D3-E50AFF88FF3F" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 
 tw-story {
-  font-family: 'Bungee Shade', cursive;
+  font-family: 'Space Mono', monospace;
   color: #000;
   background-color: #FFF;
+}
+
+.story-image {
+  width: 100%;
+}
+
+tw-link, tw-link:link, tw-link:visited, tw-link.visited {
+  color: #F01D41;
+  text-decoration: underline;
+  text-decoration-thickness: 4px;
+}
+tw-link:focus, tw-link:hover, tw-link:active, tw-link.visited:hover {
+  color: #F01D41;
+  text-decoration: none;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Distress signal" tags="" position="625,300" size="100,100">You are a space explorer on a mission to find new planets to colonize. As you travel &#39;&#39;through&#39;&#39; //space//, you receive a distress signal from a nearby ship.
 
 &lt;img class=&quot;story-image&quot; src=&quot;./images/space.jpg&quot; alt=&quot;you are floating in space&quot; /&gt;
@@ -23,6 +37,8 @@ Do you:
 
 * [[Investigate the signal]]
 * [[Ignore the signal and continue your mission]]</tw-passagedata><tw-passagedata pid="2" name="Investigate the signal" tags="" position="625,425" size="100,100">You investigate the signal and discover that the ship has crashed onto an unknown planet. 
+
+[[&lt;img class=&quot;story-image&quot; src=&quot;./images/control.jpg&quot; alt=&quot;Report the crash to your superiors and continue your mission&quot; title=&quot;Report the crash to your superiors and continue your mission&quot; /&gt;-&gt;Report the crash to your superiors and continue your mission]]
 
 Do you:
 * [[Land on the planet to help the survivors]]
