--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ Do you:
 
 [[&lt;img class=&quot;story-image&quot; src=&quot;./images/control.jpg&quot; alt=&quot;Report the crash to your superiors and continue your mission&quot; title=&quot;Report the crash to your superiors and continue your mission&quot; /&gt;-&gt;Report the crash to your superiors and continue your mission]]
 
+&lt;audio src=&quot;./audio/hum.mp3&quot; autoplay loop /&gt;
+
 Do you:
 * [[Land on the planet to help the survivors]]
 * [[Report the crash to your superiors and continue your mission]]</tw-passagedata><tw-passagedata pid="3" name="Ignore the signal and continue your mission" tags="" position="750,425" size="100,100">You ignore the signal and continue your mission. As you explore a nearby planet, you encounter hostile alien lifeforms.
