Fix audio element

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Do you:
 
 [[&lt;img class=&quot;story-image&quot; src=&quot;./images/control.jpg&quot; alt=&quot;Report the crash to your superiors and continue your mission&quot; title=&quot;Report the crash to your superiors and continue your mission&quot; /&gt;-&gt;Report the crash to your superiors and continue your mission]]
 
-&lt;audio src=&quot;./audio/hum.mp3&quot; autoplay loop /&gt;
+&lt;audio src=&quot;./audio/hum.mp3&quot; autoplay loop&gt;&lt;/audio&gt;
 
 Do you:
 * [[Land on the planet to help the survivors]]
