--- a/index.html
+++ b/index.html
@@ -39,11 +39,62 @@ tw-story[tags~="space"] {  /* the tag added in step 2 */
 
 tw-story[tags~="earth"] {  /* the tag added in step 2 */
   background-image: url(./images/future-flight-central.jpg);  /* the image added in step 1 */
+  color: #2EE133;
   background-size: cover;  /* cover the whole element */
   background-repeat: no-repeat;  /* do not repeat the background image */
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Distress signal" tags="space" position="625,300" size="100,100">You are a space explorer on a mission to find new planets to colonize. As you travel &#39;&#39;through&#39;&#39; //space//, you receive a distress signal from a nearby ship.
+}
 
-&lt;img class=&quot;story-image&quot; src=&quot;./images/space.jpg&quot; alt=&quot;you are floating in space&quot; /&gt;
+tw-story[tags~="moving"] {
+  /* animation-duration: 3s;
+  animation-name: slidein;
+  animation-iteration-count: infinite; */
+}
+
+@keyframes slidein {
+  from {
+    font-size: 100%;
+  }
+  50% {
+    font-size: 110%;
+  }
+  to {
+    font-size: 100%;
+  }
+}
+
+
+
+.story-room {
+  display: grid;  /* sets the display to grid on the surrounding div */
+  grid-template-columns: 50% 50%;  /* sets each column to 50% */
+}
+.story-text {
+  grid-column: 2;  /* sets which column the text appears in */
+  grid-row: 1;
+  box-sizing: border-box;
+  padding: 10px;
+}
+.story-image {
+  grid-column: 1;  /* sets which column the image appears in */
+  grid-row: 1;
+}
+
+#mission .control-image {
+ display: none; 
+}
+
+
+#mission:hover .control-image {
+  display: block;
+  position: absolute;
+  width: 500px;
+  z-index: 1000;
+}
+/*
+.control-image #mission { position:relative; }
+.control-image #mission span { position:absolute; display:none; z-index:99; }
+.control-image #mission:hover span { display:block; }*/
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Distress signal" tags="space" position="625,300" size="100,100">&lt;div class=&quot;story-room&quot;&gt;&lt;div class=&quot;story-text&quot;&gt;You are a space explorer on a mission to find new planets to colonize. As you travel &#39;&#39;through&#39;&#39; //space//, you receive a distress signal from a nearby ship.&lt;/div&gt;&lt;div class=&quot;story-image&quot;&gt;&lt;img class=&quot;story-image&quot; src=&quot;./images/space.jpg&quot; alt=&quot;you are floating in space&quot; /&gt;&lt;/div&gt;&lt;/div&gt;
 
 Do you:
 
@@ -56,7 +107,7 @@ Do you:
 
 Do you:
 * [[Land on the planet to help the survivors]]
-* [[Report the crash to your superiors and continue your mission]]</tw-passagedata><tw-passagedata pid="3" name="Ignore the signal and continue your mission" tags="space" position="750,425" size="100,100">You ignore the signal and continue your mission. As you explore a nearby planet, you encounter hostile alien lifeforms.
+* [[Report the crash to your superiors and continue your mission]]</tw-passagedata><tw-passagedata pid="3" name="Ignore the signal and continue your mission" tags="moving" position="750,425" size="100,100">You ignore the signal and &lt;span id=&quot;mission&quot;&gt;continue&lt;img class=&quot;control-image&quot; src=&quot;./images/space.jpg&quot; alt=&quot;you are floating in space&quot; /&gt;&lt;/span&gt; your mission. As you explore a nearby planet, you encounter hostile alien lifeforms.
 
 Do you:
 * [[Fight the aliens]]
